; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_ssl_calc_verify_tls.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_tls.c_ssl_calc_verify_tls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [19 x i8] c"=> calc verify tls\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"calculated verify result\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"<= calc verify\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ssl_calc_verify_tls(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 2, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @mbedtls_md5_init(i32* %5)
  %9 = call i32 @mbedtls_sha1_init(i32* %6)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = call i32 @mbedtls_md5_clone(i32* %5, i32* %13)
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = call i32 @mbedtls_sha1_clone(i32* %6, i32* %18)
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @mbedtls_md5_finish(i32* %5, i8* %20)
  %22 = load i8*, i8** %4, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 16
  %24 = call i32 @mbedtls_sha1_finish(i32* %6, i8* %23)
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @MBEDTLS_SSL_DEBUG_BUF(i32 3, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %25, i32 36)
  %27 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 2, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %28 = call i32 @mbedtls_md5_free(i32* %5)
  %29 = call i32 @mbedtls_sha1_free(i32* %6)
  ret void
}

declare dso_local i32 @MBEDTLS_SSL_DEBUG_MSG(i32, i8*) #1

declare dso_local i32 @mbedtls_md5_init(i32*) #1

declare dso_local i32 @mbedtls_sha1_init(i32*) #1

declare dso_local i32 @mbedtls_md5_clone(i32*, i32*) #1

declare dso_local i32 @mbedtls_sha1_clone(i32*, i32*) #1

declare dso_local i32 @mbedtls_md5_finish(i32*, i8*) #1

declare dso_local i32 @mbedtls_sha1_finish(i32*, i8*) #1

declare dso_local i32 @MBEDTLS_SSL_DEBUG_BUF(i32, i8*, i8*, i32) #1

declare dso_local i32 @mbedtls_md5_free(i32*) #1

declare dso_local i32 @mbedtls_sha1_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
